[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wowsunpack"
version = "0.1.8"
readme = "README.md"
authors = [
    {name = "Yiheng Quan", email = "development.henryquan@gmail.com"},
]
description = "Unpack World of Warships game params to JSON"
keywords = ["wows", "wws", "unpack", "params"]
requires-python = ">=3.6"
dependencies = ["gnu-mo-files"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/wowsinfo/wows_unpack"
