[metadata]
name = wowsunpack
version = 0.0.1
author = Yiheng Quan
author_email = development.henryquan@gmail.com
description = Unpack World of Warships game files
long_description = file: README.md
url = https://github.com/wowsinfo/wows_unpack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: Microsoft :: Windows
    Topic :: Utilities
keywords = wows, wws, unpack, params

[options]
python_requires = >=3.6
install_requires = gnu-mo-files
include_package_data = True

[options.package_data]
* = wowsunpack.exe
